--- a/about.html
+++ b/about.html
@@ -21,7 +21,8 @@
 
 	<main>
 		<p>
-            This will be a paragraph about me.
+            Hi! My name is Elizabeth. I'm a junior majoring in CIT and specializing in web and software development. I'm also majoring in video game design and 
+			development. Besides coding, I also enjoy riding my horse and writing stories.
         </p>
 
         <p><b>My Favorite Colors:</b></p>
