--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<main>
         <div class="rowDiv">
             <img src="tea-and-flowers.jpg" />
-            <h2>A teacup surrouunded by pink flowers and next to an open book.</h2>
+            <h2>A teacup surrounded by pink flowers and next to an open book.</h2>
         </div>
 	</main>
 
